# advent-of-code

./: .gitignore
2023/day_1/part_1/: main.cpp
2023/day_2/part_2/: main.cpp
2023/day_3/part_1/: main.cpp
2023/day_4/part_2/: main.cpp
2024/: CMakeLists.txt
2024/day_1/: CMakeLists.txt  part_1.cpp  part_2.cpp
2024/day_2/: CMakeLists.txt  part_1.cpp  part_2.cpp
2024/day_3/: CMakeLists.txt  part_1.cpp  part_2.cpp
2024/utils/: CMakeLists.txt  utils.cpp
2025/: CMakeLists.txt
2025/day_1/: CMakeLists.txt  part_1.cpp  part_2.cpp
2025/day_2/: CMakeLists.txt  part_1.cpp
2025/utils/: CMakeLists.txt  utils.cpp  utils.hpp
day_1/part_2/: main.c
day_2/: input.txt
day_2/part_1/: main.cpp
day_4/part_1/: main.cpp
